--- a/pom.xml
+++ b/pom.xml
@@ -2,17 +2,17 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.beingjavaguys.sample</groupId>
-	<artifactId>SpringRestCrud</artifactId>
+	<artifactId>Pastel4You</artifactId>
 	<packaging>war</packaging>
 	<version>1.0-SNAPSHOT</version>
-	<name>SpringRestCrud Maven Webapp</name>
+	<name>Pastel4You Maven Webapp</name>
 	<url>http://maven.apache.org</url>
 	<properties>
 		<spring.version>4.0.5.RELEASE</spring.version>
 		<hibernate.version>4.3.5.Final</hibernate.version>
 		<log4j.version>1.2.17</log4j.version>
 		<jdk.version>1.7</jdk.version>
-		<context.path>SpringRestCrud</context.path>
+		<context.path>Pastel4You</context.path>
 	</properties>
 	<build>
 		<finalName>${pom.artifactId}</finalName>
